# learn_opengl

./: .clang-format  .gitignore  CMakeLists.txt  README.MD
include/: camera.h  common.h  shader_m.h  shader_s.h
include/learnopengl/: camera.h  common.h  entity.h  mesh.h  shader_m.h  shader_s.h
resources/shaders/: shader_sample.vs
src/: glad.c  main.cpp
src/1.getting_started/: CMakeLists.txt  list.txt
src/1.getting_started/1.1.hello_window/: hello_window.cpp
src/1.getting_started/2.1.hello_triangle/: 2.hello_triangle.cpp  hello_triangle.cpp
src/1.getting_started/2.2.hello_triangle_indexed/: 3.hello_triangle_indexed.cpp  hello_triangle_indexed.cpp
src/1.getting_started/3.1.shaders_uniform/: shader_uniform.cpp
src/1.getting_started/3.2.shaders_interpolation/: 5.shaders_interpolation.cpp  shaders_interpolation.cpp
src/1.getting_started/3.3.shaders_class/: 3.3.shader.vs  shaders_class.cpp
src/1.getting_started/4.1.textures/: 4.1.texture.fs  4.1.texture.vs  7.textures.cpp  textures.cpp
src/1.getting_started/4.2.textures_combined/: textures_combined.cpp
src/1.getting_started/5.1.transformations/: transformations.cpp
src/1.getting_started/6.1.coordinate_systems/: 6.1.coordinate_systems.fs  6.1.coordinate_systems.vs  coordinate_systems.cpp
src/1.getting_started/7.1.camera_circle/: 7.1.camera.fs  7.1.camera.vs  camera.cpp
src/2.lighting/1.colors/: colors.cpp
src/2.lighting/2.1.basic_lighting_diffuse/: 2.1.basic_lighting.fs  2.1.basic_lighting.vs  2.1.light_cube.vs  basic_lighting_diffuse.cpp
src/4.advanced_opengl/: 1.1.depth_testing.cpp  1.1.depth_testing.fs  1.1.depth_testing.vs
src/4.advanced_opengl/1.1.depth_testing/: 1.1.depth_testing.fs  depth_testing.cpp
src/4.advanced_opengl/1.2.depth_testing_view/: 1.2.depth_testing.fs  depth_testing_view.cpp
src/4.advanced_opengl/1.3.depth_linear/: 1.3.depth_testing.fs  1.3.depth_testing.vs  depth_linear.cpp
src/4.advanced_opengl/2.stencil_testing/: 2.stencil_single_color.fs  stencil_testing.cpp
src/4.advanced_opengl/3.1.blending_discard/: 3.1.blending.fs  3.1.blending.vs  3.1.blending_discard.fs  3.1.blending_discard.vs  blending_discard.cpp
src/4.advanced_opengl/3.2.blending_sort/: blending_sort.cpp
src/4.advanced_opengl/5.1.framebuffers/: 5.1.framebuffers.fs  5.1.framebuffers.vs  5.1.framebuffers_screen.fs  5.1.framebuffers_screen.vs  framebuffers.cpp
src/4.advanced_opengl/6.1.cubemaps_skybox/: cubemaps_skybox.cpp
src/7.in_practice/1.debugging/: debugging.cpp  debugging.fs  debugging.vs
src/8.guest/2021/1.scene/1.scene_graph/: 1.model_loading.fs  1.model_loading.vs  model_loading.vs  scene_graph.cpp
src/8.guest/2021/1.scene/2.frustum_culling/: frustum_culling.cpp
src/8.guest/2024/8.occlusion_query/: 8.occlusion_test.fs  8.occlusion_test.vs  occlusion_query.cpp
src/_01_getting_started/: CMakeLists.txt  _1_hello_window.cpp  _2_hello_triangle.cpp  _3_hello_triangle_indexed.cpp  _4_shader_uniform.cpp  _5_shaders_interpolation.cpp  _6_shaders_class.cpp  _7_textures.cpp  _8_transformations.cpp  common.h
src/getting_started/: CMakeLists.txt  _1_hello_window.cpp  _2_hello_triangle.cpp  _3_hello_triangle_indexed.cpp  _4_shader_uniform.cpp  _6_shaders_class.cpp  hello_triangle.cpp  shaders_class.cpp  shaders_interpolation.cpp  textures.cpp  transformations.cpp
