add_executable(hello_window _1_hello_window.cpp ../glad.c)
add_executable(hello_triangle common.h _2_hello_triangle.cpp ../glad.c)
add_executable(hello_triangle_indexed common.h _3_hello_triangle_indexed.cpp ../glad.c)
add_executable(shader_uniform common.h _4_shader_uniform.cpp ../glad.c)
# add_executable(shaders_interpolation shaders_interpolation.cpp ../glad.c)
# add_executable(shaders_class shaders_class.cpp ../glad.c include/shader_s.h)
# add_executable(textures textures.cpp ../glad.c stb_image.cpp)
# add_executable(transformations transformations.cpp ../glad.c stb_image.cpp)

target_link_libraries(hello_window glfw)
target_link_libraries(hello_triangle glfw)
target_link_libraries(hello_triangle_indexed glfw)
target_link_libraries(shader_uniform glfw)
# target_link_libraries(shaders_interpolation glfw)
# target_link_libraries(shaders_class glfw)
# target_link_libraries(textures glfw)
# target_link_libraries(transformations glfw glm)